Fix compute API implementation

--- a/compute/fastly.toml
+++ b/compute/fastly.toml
@@ -6,4 +6,4 @@ description = "A basic starter kit that demonstrates routing, simple synthetic r
 language = "go"
 manifest_version = 2
 name = "compute"
-service_id = ""
+service_id = "6K0QrTEL5qNwI3Rrv3LBic"
