--- a/compute/fastly.toml
+++ b/compute/fastly.toml
@@ -7,3 +7,5 @@ language = "go"
 manifest_version = 2
 name = "subspace"
 service_id = "6K0QrTEL5qNwI3Rrv3LBic"
+[scripts]
+	build = "tinygo build -target=wasi -o bin/main.wasm ./"
